# MLOps_G47_SpotifyBuddies

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  README_final.md  README_legacy.md  akm_ReadMe.md  cloudbuild.yaml  entp_eda.ipynb
client_app_sample/: Dockerfile  config.py  lifespan.py  main.py  pyproject.toml  schema.sql
continuous_x_pipeline/: ansible.ipynb  ansible_build.ipynb  readme.md
data-pipeline/: README.md  README_report.md  docker-compose-block.yaml  docker-compose-etl.yaml  prometheus.yml  provision_block_storage.sh  provision_object_storage.sh  setup_block_store.sh  setup_object_store.sh
data_preprocessing/: Report_DataPreprocessing.md  SpotifyBuddies_Preprocessing_AL_v1.ipynb  SpotifyBuddies_Preprocessing_AL_v2.ipynb
docker/: Dockerfile  docker-compose-airflow.yml  docker-compose-base.yaml  docker-compose-experiment.yml  docker-compose-model-server.yml  down_all_docker_compose.sh  prod.run_docker_compose.sh  prometheus.yml  requirements.txt  run_docker_compose.sh
model_monitoring/: API Request Monitoring Dashboard-1746065274650.json  Model Metrics-1746067400258.json
model_server/: .dockerignore  Dockerfile  README.md  config.py  dependencies.py  lifespan.py  main.py  pyproject.toml  requirements.txt
model_server/ml_model/: model.py  recommender.py
model_server/routers/: __init__.py  playlist.py
model_server/schemas/: playlist.py
model_server/services/: prometheus.py  rabbitmq.py  rabbitmq_worker.py  redis.py
model_server/tests/: locustfile.py
resources/: README.md
training/: Makefile  README.md  README_legacy.md  (+13 more)
(+52 files in other folders)
